service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kwetter-user-frontend
  labels:
    app: nginx
spec:
  selector:
    app: kwetter-user-frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
