service.yml
apiVersion: v1
kind: Service
metadata:
  name: KwetterFrontEndService
spec:
  selector:
    app: KwetterUserFrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
