ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kwetter-user-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: kwetter-user-frontend
            port:
              number: 80
